# advent-of-code-2021

./: download.sh
python/: _template.py  pyproject.toml
python/01/: golf.py  solution.py
python/02/: solution.py
python/03/: solution.py
python/04/: solution.py
python/05/: solution.py
python/06/: golf.py  solution.py  solution_b.py
python/07/: solution.py
python/08/: solution.py
python/09/: solution.py
python/10/: solution.py
python/11/: solution.py
python/12/: solution.py  solution_memoized.py
python/13/: solution.py
python/14/: solution.py
python/15/: solution.py
python/16/: solution.py
python/17/: notes.txt  solution.py
python/18/: solution.py
python/19/: solution.py
python/20/: solution.py
python/21/: solution.py
python/22/: solution.py
python/24/: solution.py
python/25/: solution.py
