[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["Arjan de Pooter <mail@arjandepooter.nl>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.4"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
